[project]
name = "suika-game-drl-final"
version = "0.1.0"
description = ""
authors = [
    {name = "enip2473",email = "enip2473@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pymunk (>=6.11.1,<7.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
